changes-after-hw-comments

--- a/html-css/module-06/hw-06/index.html
+++ b/html-css/module-06/hw-06/index.html
@@ -47,43 +47,31 @@
 
         <section class="services container">
             <h2 class="pre-header">We work with</h2>
-            <h2 class="section-header">Amazing services</h2>
+            <h3 class="section-header">Amazing services</h3>
             <ul class="list-of-services">
                 <li class="service-type photography">
-                    <div>
-                        <h3 class="service-name">Photography</h3>
-                        <p class="service-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                    </div>
+                    <h3 class="service-name">Photography</h3>
+                    <p class="service-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
                 <li class="service-type web-design">
-                    <div>
-                        <h3 class="service-name">Web design</h3>
-                        <p class="service-descr">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                    </div>
+                    <h3 class="service-name">Web design</h3>
+                    <p class="service-descr">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
                 <li class="service-type creativity">
-                    <div>
-                        <h3 class="service-name">Creativity</h3>
-                        <p class="service-descr">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                    </div>
+                    <h3 class="service-name">Creativity</h3>
+                    <p class="service-descr">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
                 <li class="service-type seo">
-                    <div>
-                        <h3 class="service-name">SEO</h3>
-                        <p class="service-descr">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-                    </div>
+                    <h3 class="service-name">SEO</h3>
+                    <p class="service-descr">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
                 </li>
                 <li class="service-type css-html">
-                    <div>
-                        <h3 class="service-name">Css/html</h3>
-                        <p class="service-descr">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
-                    </div>
+                    <h3 class="service-name">Css/html</h3>
+                    <p class="service-descr">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
                 </li>
                 <li class="service-type digital">
-                    <div>
-                        <h3 class="service-name">Digital</h3>
-                        <p class="service-descr">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                    </div>
+                    <h3 class="service-name">Digital</h3>
+                    <p class="service-descr">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
             </ul>
         </section>
@@ -91,116 +79,119 @@
         <section class="team container">
 
             <h2 class="pre-header">Who we are</h2>
-            <h2 class="section-header">Meet our team</h2>
+            <h3 class="section-header">Meet our team</h3>
             <p class="header-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat.
             </p>
 
             <ul class="team-list">
-                <li class="team-member">
-                    <div class="team-image">
-                        <img src="img/matthew-dix.png" alt="graphic designer" width="380" height="470">
-                        <div class="overlay">
-                            <ul class="list-of-icons">
-                                <li class="icon">
-                                    <a href="#" class="facebook">
-                                        <span class="visually-hidden"></span>
-                                    </a>
-                                </li>
-                                <li class="icon">
-                                    <a href="#" class="twitter">
-                                        <span class="visually-hidden"></span>
-                                    </a>
-                                </li>
-                                <li class="icon">
-                                    <a href="#" class="pinterest">
-                                        <span class="visually-hidden"></span>
-                                    </a>
-                                </li>
-                                <li class="icon">
-                                    <a href="#" class="instagram">
-                                        <span class="visually-hidden"></span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <h3 class="team-member-name">Matthew Dix</h3>
-                    <p class="occupation">Graphic Design</p>
-                </li>
-                <li class="team-member">
 
-                    <div class="team-image">
-                        <img src="img/christopher-campbell.png" alt="UX designer" width="380" height="470">
-                        <div class="overlay">
-                            <ul class="list-of-icons">
-                                <li class="icon">
-                                    <a href="#" class="facebook">
-                                        <span class="visually-hidden"></span>
-                                    </a>
-                                </li>
-                                <li class="icon">
-                                    <a href="#" class="twitter">
-                                        <span class="visually-hidden"></span>
-                                    </a>
-                                </li>
-                                <li class="icon">
-                                    <a href="#" class="pinterest">
-                                        <span class="visually-hidden"></span>
-                                    </a>
-                                </li>
-                                <li class="icon">
-                                    <a href="#" class="instagram">
-                                        <span class="visually-hidden"></span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+                <li class="team-member">
+                    <img src="img/matthew-dix.png" alt="graphic designer" width="380" height="470" class="image">
+                    <div class="overlay">
+                        <ul class="list-of-icons">
+                            <li class="icon">
+                                <a href="#" class="facebook">
+                                    <span class="visually-hidden"></span>
+                                </a>
+                            </li>
+                            <li class="icon">
+                                <a href="#" class="twitter">
+                                    <span class="visually-hidden"></span>
+                                </a>
+                            </li>
+                            <li class="icon">
+                                <a href="#" class="pinterest">
+                                    <span class="visually-hidden"></span>
+                                </a>
+                            </li>
+                            <li class="icon">
+                                <a href="#" class="instagram">
+                                    <span class="visually-hidden"></span>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
-                    <h3 class="team-member-name">Christopher Campbell</h3>
-                    <p class="occupation">Branding/UX design</p>
+                    <div class="team-descr">
+                        <h3 class="team-member-name">Matthew Dix</h3>
+                        <p class="occupation">Graphic Design</p>
+                    </div>
                 </li>
 
                 <li class="team-member">
-                    <div class="team-image">
-                        <img src="img/michael-fertig.png" alt="developer" width="380" height="470">
-                        <div class="overlay">
-                            <ul class="list-of-icons">
-                                <li class="icon">
-                                    <a href="#" class="facebook">
-                                        <span class="visually-hidden"></span>
-                                    </a>
-                                </li>
-                                <li class="icon">
-                                    <a href="#" class="twitter">
-                                        <span class="visually-hidden"></span>
-                                    </a>
-                                </li>
-                                <li class="icon">
-                                    <a href="#" class="pinterest">
-                                        <span class="visually-hidden"></span>
-                                    </a>
-                                </li>
-                                <li class="icon">
-                                    <a href="#" class="instagram">
-                                        <span class="visually-hidden"></span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+                    <img src="img/christopher-campbell.png" alt="UX designer" width="380" height="470" class="image">
+                    <div class="overlay">
+                        <ul class="list-of-icons">
+                            <li class="icon">
+                                <a href="#" class="facebook">
+                                    <span class="visually-hidden"></span>
+                                </a>
+                            </li>
+                            <li class="icon">
+                                <a href="#" class="twitter">
+                                    <span class="visually-hidden"></span>
+                                </a>
+                            </li>
+                            <li class="icon">
+                                <a href="#" class="pinterest">
+                                    <span class="visually-hidden"></span>
+                                </a>
+                            </li>
+                            <li class="icon">
+                                <a href="#" class="instagram">
+                                    <span class="visually-hidden"></span>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
-                    <h3 class="team-member-name">Michael Fertig</h3>
-                    <p class="occupation">Developer</p>
+                    <div class="team-descr">
+                        <h3 class="team-member-name">Christopher Campbell</h3>
+                        <p class="occupation">Branding/UX design</p>
+                    </div>
                 </li>
+
+                <li class="team-member">
+                    <img src="img/michael-fertig.png" alt="developer" width="380" height="470" class="image">
+                    <div class="overlay">
+                        <ul class="list-of-icons">
+                            <li class="icon">
+                                <a href="#" class="facebook">
+                                    <span class="visually-hidden"></span>
+                                </a>
+                            </li>
+                            <li class="icon">
+                                <a href="#" class="twitter">
+                                    <span class="visually-hidden"></span>
+                                </a>
+                            </li>
+                            <li class="icon">
+                                <a href="#" class="pinterest">
+                                    <span class="visually-hidden"></span>
+                                </a>
+                            </li>
+                            <li class="icon">
+                                <a href="#" class="instagram">
+                                    <span class="visually-hidden"></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="team-descr">
+                        <h3 class="team-member-name">Michael Fertig</h3>
+                        <p class="occupation">Developer</p>
+                    </div>
+                </li>
+
             </ul>
+
         </section>
 
     </main>
 
     <footer class="footer container">
         <p class="copyrigth">&#169; 2016 MoGo free PSD template by
-            <span class="color">Laaqiq</span>
+            <a href="#" target="_blank" class="color">Laaqiq</a>
         </p>
         <div class="subscribe">
             <input type="text" placeholder="Your Email..." name="mail" class="e-mail">
