--- a/html-css/module-06/hw-06/index.html
+++ b/html-css/module-06/hw-06/index.html
@@ -197,7 +197,7 @@
     </main>
 
     <footer class="footer container">
-      <p class="copyrigth">
+      <p class="copyright">
         &#169; 2016 MoGo free PSD template by
         <a href="#" target="_blank" class="color">Laaqiq</a>
       </p>
