hw-07-section-padding

--- a/html-css/module-07/hw-07/index.html
+++ b/html-css/module-07/hw-07/index.html
@@ -35,14 +35,15 @@
         </nav>
     </header>
 
-    <main class="main-content"></main>
+    <main class="main-content">
 
     <h1 class="visually-hidden">Golden company</h1>
 
     <section class="services container">
-        <h2 class="section-header">Services</h2>
+        <header class="section-header">
+        <h2 class="section-title">Services</h2>
         <p class="header-descr">Proin iaculis purus consequat sem cure. </p>
-
+        </header>
         <ul class="list-of-services">
             <li class="service-type commerce">
                 <h3 class="service-name">E-Commerce</h3>
@@ -64,8 +65,10 @@
 
     <section class="contact-us">
         <div class="container">
-            <h2 class="section-header">Contact us</h2>
+            <header class="section-header">
+            <h2 class="section-title">Contact us</h2>
             <p class="header-descr">Proin iaculis purus consequat sem cure. </p>
+            </header>
             <form class="contact-form">
                 <ul class="input-list">
                     <li>
@@ -86,7 +89,7 @@
             </form>
         </div>
     </section>
-
+</main>
 </body>
 
 </html>
